--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,10 @@
     color: black !important; /* Change icon color to black on hover, focus, and active */
   }
   
-
+.ant-pagination-item{
+    border-radius: 0% !important;
+    border-width: 1.5px !important;
+}
   .ant-pagination-item:hover,
   .ant-pagination-next:hover,
   .ant-pagination-previous:hover {
@@ -94,11 +97,7 @@
     border-radius: 0%;
     border-width: 1.5px;
   }
-  .ant-pagination-item-active {
-    border-color: rgb(94, 106, 47) !important;
-    border-radius: 0%;
-    border-width: 1.5px;
-}
+
 .ant-pagination-item-active a {
     color: black !important; /* Change text color of active pagination item to black */
 }
